--- a/views/index.erb
+++ b/views/index.erb
@@ -5,6 +5,12 @@
 		<link rel="stylesheet" href="/css/global.css" />
 	</head>
 	<body>
+		<form id="task-form">
+			<label for="field-comment">Comment</label>
+			<textarea id="field-comment" name="comment" placeholder="Enter a todo here&hellip;"></textarea>
+			<button type="submit">Create</button>
+		</form>
+		<ul class="task-list"></ul>
 		<script src="/javascript/underscore.js"></script>
 		<script src="/javascript/backbone.js"></script>
 		<script src="/javascript/application.js"></script>
