--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="/css/global.css" />
 	</head>
 	<body>
-		<form id="task-form">
+		<form id="task-form" action="/tasks/" method="POST">
 			<label for="field-comment">Comment</label>
 			<textarea id="field-comment" name="comment" placeholder="Enter a todo here&hellip;"></textarea>
 			<button type="submit">Create</button>
