Added Zepto to the index.html file

--- a/views/index.erb
+++ b/views/index.erb
@@ -11,6 +11,7 @@
 			<button type="submit">Create</button>
 		</form>
 		<ul class="task-list"></ul>
+		<script src="/javascript/zepto.js"></script>
 		<script src="/javascript/underscore.js"></script>
 		<script src="/javascript/backbone.js"></script>
 		<script src="/javascript/application.js"></script>
