Added a done button

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
 		<form id="task-form" action="/tasks" method="POST">
 			<label for="field-comment">Comment</label>
 			<textarea id="field-comment" name="comment" placeholder="Enter a todo here&hellip;"></textarea>
-			<button type="submit">Create</button>
+			<button class="add" type="submit">Add</button>
 		</form>
 		<ul id="task-list"></ul>
 		<script>function bootstrap() { return <%= $tasks.compact.to_json %>; }</script>
