More last minute changes :/

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
 	<body>
 		<form id="task-form" action="/tasks" method="POST">
 			<label for="field-comment">Comment</label>
-			<textarea id="field-comment" name="comment" placeholder="Enter a todo here&hellip;"></textarea>
+			<input id="field-comment" name="comment" placeholder="Enter a todo here&hellip;" />
 			<button class="add" type="submit">Add</button>
 		</form>
 		<ul id="task-list"></ul>
