--- a/public/css/global.css
+++ b/public/css/global.css
@@ -17,7 +17,7 @@ body {
 	overflow: hidden;
 }
 
-#task-form textarea {
+#task-form input {
 	font: 62.5%/1 "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 	font-size: 32px;
 	height: 78px;
@@ -30,12 +30,20 @@ body {
 	padding: 8px 15px;
 	border: 1px solid #e0dfdf;
 	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	-ms-border-radius: 3px;
 	-o-border-radius: 3px;
 	border-radius: 3px;
 	-webkit-box-shadow:
+		inset 0 0 38px rgba(0, 0, 0, 0.03),
+		inset 0 0 5px rgba(0, 0, 0, 0.3);
+	-moz-box-shadow:
+		inset 0 0 38px rgba(0, 0, 0, 0.03),
+		inset 0 0 5px rgba(0, 0, 0, 0.3);
+	box-shadow:
 		inset 0 0 38px rgba(0, 0, 0, 0.03),
 		inset 0 0 5px rgba(0, 0, 0, 0.3);
 }
@@ -62,10 +70,22 @@ button {
 	-webkit-box-shadow:
 		inset 0 2px 0 rgba(255, 255, 255, 0.17),
 		inset 0 0 5px rgba(255, 255, 255, 0.25);
+	-moz-box-shadow:
+		inset 0 2px 0 rgba(255, 255, 255, 0.17),
+		inset 0 0 5px rgba(255, 255, 255, 0.25);
+	box-shadow:
+		inset 0 2px 0 rgba(255, 255, 255, 0.17),
+		inset 0 0 5px rgba(255, 255, 255, 0.25);
 	background-image: -webkit-gradient(
   		linear, left top, left bottom,
   		from(#e4e4e4),
   		to(#c7c6c6)
+	);
+	background-image: -moz-linear-gradient(
+  		-90deg, #e4e4e4, #c7c6c6
+	);
+	background-image: linear-gradient(
+  		-90deg, #e4e4e4, #c7c6c6
 	);
 }
 
@@ -77,6 +97,12 @@ button.add {
   		from(#007eff),
   		to(#006ede)
 	);
+	background-image: -moz-linear-gradient(
+  		-90deg, #007eff, #006ede
+	);
+	background-image: linear-gradient(
+  		-90deg, #007eff, #006ede
+	);
 }
 
 button.delete {
@@ -85,10 +111,22 @@ button.delete {
 	-webkit-box-shadow:
 		inset 0 2px 0 rgba(255, 255, 255, 0.17),
 		inset 0 0 5px rgba(255, 255, 255, 0.25);
+	-moz-box-shadow:
+	inset 0 2px 0 rgba(255, 255, 255, 0.17),
+	inset 0 0 5px rgba(255, 255, 255, 0.25);
+	box-shadow:
+	inset 0 2px 0 rgba(255, 255, 255, 0.17),
+	inset 0 0 5px rgba(255, 255, 255, 0.25);
 	background-image: -webkit-gradient(
   		linear, left top, left bottom,
   		from(#fb3913),
   		to(#ce1502)
+	);
+	background-image: -moz-linear-gradient(
+  		-90deg, #fb3913, #ce1502
+	);
+	background-image: linear-gradient(
+  		-90deg, #fb3913, #ce1502
 	);
 }
 
@@ -106,6 +144,11 @@ button.delete {
 	line-height: 50px;
 	padding: 5px 0;
 	border-bottom: 1px dashed #dcdcdc;
+}
+
+#task-list li.state-done :not(button) {
+	text-decoration: line-through;
+	color: #ccc;
 }
 
 #task-list li button {
